CREATE DATABASE QLGIAY;
GO
USE QLGIAY;
GO

-- 1. BẢNG NHÀ CUNG CẤP
CREATE TABLE NHACUNGCAP (
    MANHACUNGCAP CHAR(20) PRIMARY KEY,
    TENNHACUNGCAP NVARCHAR(150),
    DIACHI NVARCHAR(300),
    SODIENTHOAI NVARCHAR(11),
    EMAIL NVARCHAR(100)
);

-- 2. BẢNG KHÁCH HÀNG
CREATE TABLE KHACHHANG (
    MAKHACHHANG CHAR(20) PRIMARY KEY,
    HOTEN NVARCHAR(100),
    SODIENTHOAI NVARCHAR(11),
    EMAIL NVARCHAR(100),
    DIACHI NVARCHAR(300),
    NGAYTAO DATETIME DEFAULT GETDATE()
);

-- 3. BẢNG NHÂN VIÊN
CREATE TABLE NHANVIEN (
    MANHANVIEN CHAR(20) PRIMARY KEY,
    HOTEN NVARCHAR(100) NOT NULL,
    SODIENTHOAI NCHAR(11),
    EMAIL NVARCHAR(100),
    CHUCVU NVARCHAR(50),
    NGAYVAOLAM DATETIME DEFAULT GETDATE(),
    LUONG DECIMAL(18,2) DEFAULT 0
);

-- 4. BẢNG TÀI KHOẢN
CREATE TABLE TAIKHOAN (
    MATAIKHOAN CHAR(20) PRIMARY KEY,
    TENTAIKHOAN NVARCHAR(50) NOT NULL UNIQUE,
    MATKHAU NVARCHAR(MAX) NOT NULL,
    LOAITAIKHOAN NVARCHAR(20) NOT NULL CHECK (LOAITAIKHOAN IN (N'KHÁCH HÀNG', N'NHÂN VIÊN', N'QUẢN TRỊ')),
    MAKHACHHANG CHAR(20) NULL,
    MANHANVIEN CHAR(20) NULL,
    NGAYTAO DATETIME DEFAULT GETDATE(),
    CONSTRAINT FK_TAIKHOAN_KHACHHANG FOREIGN KEY (MAKHACHHANG) REFERENCES KHACHHANG(MAKHACHHANG),
    CONSTRAINT FK_TAIKHOAN_NHANVIEN FOREIGN KEY (MANHANVIEN) REFERENCES NHANVIEN(MANHANVIEN)
);


-- 5. BẢNG SẢN PHẨM
CREATE TABLE SANPHAM (
    MASANPHAM CHAR(20) PRIMARY KEY,
    TENSANPHAM NVARCHAR(150),
    MOTA NVARCHAR(MAX),
    GIA DECIMAL(18,2) NOT NULL CHECK (GIA > 0),
    GIAKHUYENMAI DECIMAL(18,2),
    HINHANH NVARCHAR(300),
    SOLUONGTON INT DEFAULT 0,
    MANHACUNGCAP CHAR(20),
    NGAYTAO DATETIME DEFAULT GETDATE(),
    CONSTRAINT FK_SANPHAM_NHACUNGCAP FOREIGN KEY (MANHACUNGCAP) REFERENCES NHACUNGCAP(MANHACUNGCAP)
);

-- 6. BẢNG ĐÁNH GIÁ SẢN PHẨM
CREATE TABLE DANHGIASANPHAM (
    MADANHGIA CHAR(20) PRIMARY KEY,
    MAKHACHHANG CHAR(20),
    MASANPHAM CHAR(20),
    DIEM INT CHECK (DIEM BETWEEN 1 AND 5),
    BINHLUAN NVARCHAR(1000),
    NGAYDANHGIA DATETIME DEFAULT GETDATE(),
    CONSTRAINT FK_DANHGIA_KHACHHANG FOREIGN KEY (MAKHACHHANG) REFERENCES KHACHHANG(MAKHACHHANG),
    CONSTRAINT FK_DANHGIA_SANPHAM FOREIGN KEY (MASANPHAM) REFERENCES SANPHAM(MASANPHAM)
);

-- 7. BẢNG HÓA ĐƠN
CREATE TABLE HOADON (
    MAHOADON CHAR(20) PRIMARY KEY,
    MAKHACHHANG CHAR(20),
    MANHANVIEN CHAR(20),
    NGAYLAP DATETIME DEFAULT GETDATE(),
    TONGTIEN DECIMAL(18,2),
    TRANGTHAI NVARCHAR(50),
    TENNGUOINHAN NVARCHAR(100),

    DIENTHOAINGIAO NVARCHAR(11),
    DIACHIGIAO NVARCHAR(300),
    GHICHU NVARCHAR(500),
    CONSTRAINT FK_HOADON_KHACHHANG FOREIGN KEY (MAKHACHHANG) REFERENCES KHACHHANG(MAKHACHHANG),
    CONSTRAINT FK_HOADON_NHANVIEN FOREIGN KEY (MANHANVIEN) REFERENCES NHANVIEN(MANHANVIEN)
);

-- 8. BẢNG CHI TIẾT HÓA ĐƠN
CREATE TABLE CHITIET_HOADON (
    MAHOADON CHAR(20),
    MASANPHAM CHAR(20),
    SOLUONG INT,
    DONGIA DECIMAL(18,2),
    PRIMARY KEY (MAHOADON, MASANPHAM),
    CONSTRAINT FK_CHITIET_HOADON FOREIGN KEY (MAHOADON) REFERENCES HOADON(MAHOADON),
    CONSTRAINT FK_CHITIET_SANPHAM FOREIGN KEY (MASANPHAM) REFERENCES SANPHAM(MASANPHAM)
);

-- ==================== DỮ LIỆU ====================

-- 1. NHÀ CUNG CẤP (6)
INSERT INTO NHACUNGCAP (MANHACUNGCAP, TENNHACUNGCAP, SODIENTHOAI, EMAIL, DIACHI) VALUES
('NCC001', N'ADIDAS', '0901234567', 'adidas@vn.com', N'123 ĐƯỜNG LÊ LỢI, QUẬN 1, TP.HCM'),
('NCC002', N'NIKE', '0907654321', 'nike@vn.com', N'456 ĐƯỜNG NGUYỄN HUỆ, QUẬN 1, TP.HCM'),
('NCC003', N'CROCS', '0912345678', 'crocs@vn.com', N'789 ĐƯỜNG HAI BÀ TRƯNG, QUẬN 3, TP.HCM'),
('NCC004', N'CONVERSE', '0908889999', 'converse@vn.com', N'101 ĐƯỜNG PASTEUR, QUẬN 3, TP.HCM'),
('NCC005', N'FILA', '0909998888', 'fila@vn.com', N'202 ĐƯỜNG TRẦN HƯNG ĐẠO, QUẬN 1, TP.HCM'),
('NCC006', N'VANS', '0907776666', 'vans@vn.com', N'303 ĐƯỜNG LÊ VĂN SỸ, QUẬN 3, TP.HCM'),
('NCC007', N'PLUS', '0906667777', 'plus@vn.com', N'404 ĐƯỜNG LÊ QUANG ĐỊNH, QUẬN BÌNH THẠNH, TP.HCM');

-- 2. KHÁCH HÀNG (5)
INSERT INTO KHACHHANG (MAKHACHHANG, HOTEN, SODIENTHOAI, EMAIL, DIACHI) VALUES
('KH001', N'NGUYỄN VĂN AN', '0901112223', 'an@gmail.com', N'123 ĐƯỜNG ABC, QUẬN 1, TP.HCM'),
('KH002', N'TRẦN THỊ BÍCH', '0903334445', 'bich@yahoo.com', N'456 ĐƯỜNG XYZ, QUẬN 7, TP.HCM'),
('KH003', N'PHẠM MINH TUẤN', '0912345678', 'tuan@gmail.com', N'789 ĐƯỜNG LÊ ĐỨC THỌ, QUẬN GÒ VẤP, TP.HCM'),
('KH004', N'LÊ THỊ HỒNG NHUNG', '0909876543', 'nhung@yahoo.com', N'321 ĐƯỜNG PHAN VĂN TRỊ, QUẬN BÌNH THẠNH, TP.HCM'),
('KH005', N'HOÀNG VĂN NAM', '0934567890', 'nam@outlook.com', N'555 ĐƯỜNG NGUYỄN KIỆM, QUẬN PHÚ NHUẬN, TP.HCM');

-- 3. NHÂN VIÊN (4)
INSERT INTO NHANVIEN (MANHANVIEN, HOTEN, SODIENTHOAI, EMAIL, CHUCVU, LUONG) VALUES
('NV001', N'LÊ VĂN HÙNG', '0911111111', 'hung@meodigiay.com', N'QUẢN LÝ', 20000000),
('NV002', N'PHẠM THỊ MAI', '0912222222', 'mai@meodigiay.com', N'NHÂN VIÊN BÁN HÀNG', 8000000),
('NV003', N'TRẦN VĂN PHÚ', '0923456789', 'phu@meodigiay.com', N'NHÂN VIÊN KHO', 9000000),
('NV004', N'NGUYỄN THỊ KIM ANH', '0945678901', 'anh@meodigiay.com', N'NHÂN VIÊN BÁN HÀNG', 8500000);

-- 4. TÀI KHOẢN (8)
INSERT INTO TAIKHOAN (MATAIKHOAN, TENTAIKHOAN, MATKHAU, LOAITAIKHOAN, MANHANVIEN)
VALUES ('TK_ADMIN', 'admin', 'Admin@123', N'QUẢN TRỊ', 'NV001');

--string hash = BCrypt.Net.BCrypt.HashPassword("Admin@123");
--UPDATE TAIKHOAN 
--SET MATKHAU = '<<HASH>>' 
--WHERE MATAIKHOAN = 'TK_ADMIN';

-- 5. SẢN PHẨM (30)
-- INSERT SẢN PHẨM: MỖI THƯƠNG HIỆU 5 SP – TỔNG 30
-- ĐƯỜNG DẪN ẢNH: [THƯƠNG HIỆU] + SỐ + .jpeg

INSERT INTO SANPHAM (MASANPHAM, TENSANPHAM, MOTA, GIA, GIAKHUYENMAI, HINHANH, SOLUONGTON, MANHACUNGCAP) VALUES

-- ADIDAS (NCC001) – 5 SP
('SP001', N'ADIDAS ULTRABOOST 22', N'GIÀY CHẠY BỘ CAO CẤP, ĐỆM BOOST ÊM ÁI', 4200000, 3800000, 'ADIDAS1.jpeg', 50, 'NCC001'),
('SP002', N'ADIDAS STAN SMITH', N'GIÀY CỔ ĐIỂN, DỄ PHỐI ĐỒ', 2500000, 2200000, 'ADIDAS2.jpeg', 120, 'NCC001'),
('SP003', N'ADIDAS SUPERSTAR', N'MŨI VỎ SÒ ĐẶC TRƯNG, PHONG CÁCH RETRO', 2700000, 2400000, 'ADIDAS3.jpeg', 90, 'NCC001'),
('SP004', N'ADIDAS NMD R1', N'GIÀY ĐỆM BOOST, THOẢI MÁI ĐI LÂU', 3500000, 3100000, 'ADIDAS4.jpeg', 70, 'NCC001'),
('SP005', N'ADIDAS YEEZY 350', N'GIÀY HUYỀN THOẠI, THIẾT KẾ ĐỘC ĐÁO', 8500000, 7800000, 'ADIDAS5.jpeg', 30, 'NCC001'),

-- CONVERSE (NCC004) – 5 SP
('SP006', N'CONVERSE CHUCK 70 HIGH', N'GIÀY CANVAS CỔ CAO, PHONG CÁCH CỔ ĐIỂN', 1900000, 1700000, 'CONVERSE1.jpeg', 130, 'NCC004'),
('SP007', N'CONVERSE CHUCK 70 LOW', N'GIÀY CANVAS CỔ THẤP, ĐƠN GIẢN', 1800000, 1600000, 'CONVERSE2.jpeg', 140, 'NCC004'),
('SP008', N'CONVERSE RUN STAR HIKE', N'ĐẾ RĂNG CƯA, CÁ TÍNH', 2500000, 2200000, 'CONVERSE3.jpeg', 95, 'NCC004'),
('SP009', N'CONVERSE ONE STAR', N'GIÀY DA LỘN, PHONG CÁCH CỔ ĐIỂN', 2100000, 1900000, 'CONVERSE4.jpeg', 110, 'NCC004'),
('SP010', N'CONVERSE JACK PURCELL', N'GIÀY VẢI, MŨI CƯỜI ĐẶC TRƯNG', 2000000, 1800000, 'CONVERSE5.jpeg', 100, 'NCC004'),

-- CROCS (NCC003) – 5 SP
('SP011', N'CROCS CLASSIC CLOG', N'DÉP THOẢI MÁI, PHÙ HỢP MỌI HOẠT ĐỘNG', 1200000, 1000000, 'CROCS1.jpeg', 200, 'NCC003'),
('SP012', N'CROCS ECHO CLOG', N'DÉP DÀY, THIẾT KẾ HIỆN ĐẠI', 1800000, 1600000, 'CROCS2.jpeg', 150, 'NCC003'),
('SP013', N'CROCS BAYABAND CLOG', N'DÉP ĐA NĂNG, MÀU SẮC TRẺ TRUNG', 1400000, 1200000, 'CROCS3.jpeg', 200, 'NCC003'),
('SP014', N'CROCS LITERIDE 360', N'DÉP ÊM, THOẢI MÁI ĐI LÂU', 1600000, 1400000, 'CROCS4.jpeg', 180, 'NCC003'),
('SP015', N'CROCS CLASSIC PLATFORM', N'DÉP ĐẾ CAO, TÔN DÁNG', 1500000, 1300000, 'CROCS5.jpeg', 160, 'NCC003'),

-- FILA (NCC005) – 5 SP
('SP016', N'FILA DISRUPTOR 2', N'GIÀY ĐẾ DÀY, PHONG CÁCH CHUNKY', 2500000, 2200000, 'FILA1.jpeg', 110, 'NCC005'),
('SP017', N'FILA RAY TRACER', N'GIÀY THỂ THAO, MÀU SẮC NỔI BẬT', 2700000, 2400000, 'FILA2.jpeg', 80, 'NCC005'),
('SP018', N'FILA GRANT HILL', N'GIÀY BÓNG RỔ CỔ CAO, PHONG CÁCH 90S', 2800000, 2500000, 'FILA3.jpeg', 70, 'NCC005'),
('SP019', N'FILA VENOM', N'GIÀY CHẠY BỘ NHẸ, THOÁNG KHÍ', 2300000, 2000000, 'FILA4.jpeg', 90, 'NCC005'),
('SP020', N'FILA OAKMONT TR', N'GIÀY ĐI ĐỊA HÌNH, BỀN BỈ', 2600000, 2300000, 'FILA5.jpeg', 85, 'NCC005'),

-- NIKE (NCC002) – 5 SP
('SP021', N'NIKE AIR FORCE 1', N'GIÀY HUYỀN THOẠI, PHONG CÁCH ĐƯỜNG PHỐ', 2900000, 2600000, 'NIKE1.jpeg', 100, 'NCC002'),
('SP022', N'NIKE AIR JORDAN 1', N'GIÀY BÓNG RỔ HUYỀN THOẠI', 4800000, 4500000, 'NIKE2.jpeg', 60, 'NCC002'),
('SP023', N'NIKE DUNK LOW', N'GIÀY CỔ THẤP, PHONG CÁCH HIỆN ĐẠI', 3500000, 3200000, 'NIKE3.jpeg', 85, 'NCC002'),
('SP024', N'NIKE AIR MAX 270', N'ĐỆM KHÍ LỚN, ÊM ÁI', 4200000, 3900000, 'NIKE4.jpeg', 100, 'NCC002'),
('SP025', N'NIKE ZOOM PEGASUS', N'GIÀY CHẠY BỘ CHUYÊN DỤNG', 3800000, 3500000, 'NIKE5.jpeg', 65, 'NCC002'),

-- PLUS (NCC007) – 5 SP
('SP026', N'PLUS OLD SKOOL', N'GIÀY VẢI CANVAS, ĐẾ CAO SU, BỀN BỈ', 1800000, 1600000, 'PLUS1.jpeg', 150, 'NCC007'),
('SP027', N'PLUS AUTHENTIC', N'GIÀY CỔ THẤP, PHONG CÁCH SKATE', 1700000, 1500000, 'PLUS2.jpeg', 140, 'NCC007'),
('SP028', N'PLUS SK8-HI', N'GIÀY CỔ CAO, BẢO VỆ MẮT CÁ', 2000000, 1800000, 'PLUS3.jpeg', 120, 'NCC007'),
('SP029', N'PLUS ERA', N'GIÀY CỔ ĐIỂN, THOẢI MÁI', 1750000, 1550000, 'PLUS4.jpeg', 130, 'NCC007'),
('SP030', N'PLUS COMFYCUSH', N'GIÀY ĐỆM ÊM, ĐI CẢ NGÀY', 1950000, 1750000, 'PLUS5.jpeg', 110, 'NCC007');

-- 6. ĐÁNH GIÁ SẢN PHẨM (18)
INSERT INTO DANHGIASANPHAM (MADANHGIA, MAKHACHHANG, MASANPHAM, DIEM, BINHLUAN) VALUES
('DG001', 'KH001', 'SP001', 5, N'GIÀY RẤT ÊM, ĐI HẾT NGÀY KHÔNG MỎI CHÂN!'),
('DG002', 'KH002', 'SP002', 4, N'MÀU ĐẸP, FORM CHUẨN, NHƯNG NÊN CÓ THÊM SIZE NHỎ HƠN'),
('DG003', 'KH001', 'SP003', 5, N'DÉP CROCS CHUẨN CHÍNH HÃNG, RẤT ỔN!'),
('DG004', 'KH001', 'SP002', 5, N'GIÀY AIR FORCE 1 ĐẸP, ĐI RẤT ÊM, ĐÁNG TIỀN!'),
('DG005', 'KH002', 'SP001', 4, N'ULTRABOOST THOẢI MÁI NHƯNG GIÁ HƠI CAO'),
('DG006', 'KH003', 'SP004', 5, N'STAN SMITH CHUẨN FORM, MÀU TRẮNG SẠCH SẼ'),
('DG007', 'KH003', 'SP018', 4, N'CROCS ECHO CỨNG CÁP, ĐI MƯA OK'),
('DG008', 'KH004', 'SP011', 5, N'JORDAN 1 QUÁ ĐẸP, ĐÁNG ĐỂ SƯU TẦM'),
('DG009', 'KH004', 'SP026', 3, N'FILA DISRUPTOR ĐẾ DÀY, ĐI MỘT LÚC NẶNG CHÂN'),
('DG010', 'KH005', 'SP028', 5, N'VANS OLD SKOOL BỀN, ĐI HỌC RẤT ỔN'),
('DG011', 'KH001', 'SP014', 5, N'AIR MAX 270 ĐỆM KHÍ SIÊU ÊM'),
('DG012', 'KH002', 'SP024', 4, N'CONVERSE CHUCK 70 MÀU ĐEN ĐẸP, NHƯNG DỄ BẨN'),
('DG013', 'KH003', 'SP003', 5, N'CROCS CLASSIC NHẸ, ĐI NHÀ THOẢI MÁI'),
('DG014', 'KH004', 'SP005', 5, N'SUPERSTAR MŨI VỎ SÒ ĐẶC TRƯNG, RẤT THÍCH'),
('DG015', 'KH005', 'SP012', 4, N'DUNK LOW MÀU TRẮNG ĐẸP NHƯNG DỄ BẨN'),
('DG016', 'KH001', 'SP030', 5, N'VANS SK8-HI BẢO VỆ MẮT CÁ TỐT'),
('DG017', 'KH002', 'SP021', 4, N'CROCS ALL TERRAIN ĐI ĐỊA HÌNH TỐT'),
('DG018', 'KH003', 'SP009', 5, N'YEEZY 350 ĐÁNG GIÁ, SIÊU NHẸ');

-- 7. HÓA ĐƠN (10)
INSERT INTO HOADON (MAHOADON, MAKHACHHANG, MANHANVIEN, TONGTIEN, TRANGTHAI, TENNGUOINHAN, DIENTHOAINGIAO, DIACHIGIAO, GHICHU) VALUES
('HD001', 'KH001', 'NV002', 7600000, N'HOÀN THÀNH', N'NGUYỄN VĂN AN', '0901112223', N'123 ĐƯỜNG ABC, QUẬN 1, TP.HCM', NULL),
('HD002', 'KH002', NULL, 2900000, N'CHỜ XỬ LÝ', N'TRẦN THỊ BÍCH', '0903334445', N'456 ĐƯỜNG XYZ, QUẬN 7, TP.HCM', NULL),
('HD003', 'KH003', 'NV003', 5000000, N'HOÀN THÀNH', N'PHẠM MINH TUẤN', '0912345678', N'789 ĐƯỜNG LÊ ĐỨC THỌ, QUẬN GÒ VẤP', N'GIAO BUỔI SÁNG'),
('HD004', 'KH004', 'NV004', 3500000, N'ĐÃ GIAO', N'LÊ THỊ HỒNG NHUNG', '0909876543', N'321 ĐƯỜNG PHAN VĂN TRỊ, QUẬN BÌNH THẠNH', NULL),
('HD005', 'KH005', NULL, 1800000, N'CHỜ XỬ LÝ', N'HOÀNG VĂN NAM', '0934567890', N'555 ĐƯỜNG NGUYỄN KIỆM, QUẬN PHÚ NHUẬN', N'GIAO COD'),
('HD006', 'KH001', 'NV002', 5500000, N'HOÀN THÀNH', N'NGUYỄN VĂN AN', '0901112223', N'123 ĐƯỜNG ABC, QUẬN 1', NULL),
('HD007', 'KH002', 'NV004', 2500000, N'ĐÃ GIAO', N'TRẦN THỊ BÍCH', '0903334445', N'456 ĐƯỜNG XYZ, QUẬN 7', N'GIAO NHANH'),
('HD008', 'KH003', NULL, 2700000, N'CHỜ XỬ LÝ', N'PHẠM MINH TUẤN', '0912345678', N'789 ĐƯỜNG LÊ ĐỨC THỌ, QUẬN GÒ VẤP', NULL),
('HD009', 'KH004', 'NV003', 11000000, N'HOÀN THÀNH', N'LÊ THỊ HỒNG NHUNG', '0909876543', N'321 ĐƯỜNG PHAN VĂN TRỊ, QUẬN BÌNH THẠNH', N'GIAO BUỔI TỐI'),
('HD010', 'KH005', 'NV002', 2200000, N'ĐÃ GIAO', N'HOÀNG VĂN NAM', '0934567890', N'555 ĐƯỜNG NGUYỄN KIỆM, QUẬN PHÚ NHUẬN', NULL);

-- 8. CHI TIẾT HÓA ĐƠN (14 dòng)
INSERT INTO CHITIET_HOADON (MAHOADON, MASANPHAM, SOLUONG, DONGIA) VALUES
('HD001', 'SP001', 2, 3800000),
('HD002', 'SP002', 1, 2900000),
('HD003', 'SP004', 2, 2200000),
('HD003', 'SP028', 1, 1600000),
('HD004', 'SP011', 1, 3500000),
('HD005', 'SP030', 1, 1800000),
('HD006', 'SP014', 1, 3900000),
('HD006', 'SP018', 1, 1600000),
('HD007', 'SP026', 1, 2500000),
('HD008', 'SP005', 1, 2700000),
('HD009', 'SP009', 1, 7800000),
('HD009', 'SP012', 1, 3200000),
('HD010', 'SP003', 1, 1000000),
('HD010', 'SP019', 1, 1200000);